--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Hero_Marvel"
         tools:targetApi="31">
         <activity
+            android:name=".ChoiceActivity"
+            android:screenOrientation="landscape"
+            android:exported="false" />
+        <activity
             android:name=".FightActivity"
             android:exported="false"
             android:screenOrientation="landscape" />
